# ml-mcp

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  docker-compose.yml  graph_config.json  graph_config.yaml  justfile  pyproject.toml
.claude/agents/: coding-standards.md  git-workflow.md  testing-strategy.md
.github/: agents.md
.github/agents/: architecture-decisions.md  debugging-guide.md  git-workflow.md
.github/workflows/: main.yaml
docker/: Dockerfile.api  Dockerfile.frontend  Dockerfile.mcp  Dockerfile.prefect  compose.prefect.yml  compose.stack.yml  nginx.conf
frontend/: .prettierrc  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/Chat/: ChatWindow.tsx  InputBar.tsx  MessageBubble.tsx  TypingIndicator.tsx
frontend/src/components/Sidebar/: NewChatButton.tsx  SessionItem.tsx  Sidebar.tsx
frontend/src/components/shared/: EmptyState.tsx  ErrorBanner.tsx
frontend/src/hooks/: useChat.ts  useSessions.ts  useTheme.ts  useUserId.ts
frontend/src/types/: api.ts
postgres/: schema.sql
src/: __init__.py
src/config/: config.py  config_models.py
src/data_pipeline/: pipeline.py
src/data_pipeline/flows/: data_acquisition.py  graph_populating.py  llm_cypher_generation.py  ocr_extraction.py  schema_reflection.py
src/mcp_client/: client.py
src/mcp_server/: server.py
src/mcp_server/tools/karierownik/: scheduler.py  settings.py  state.py  tool.py
src/mcp_server/tools/karierownik/data_scraper/: __init__.py  data_scraper.py
src/mcp_server/tools/karierownik/data_scraper/scrapers/: __init__.py  nokia_scraper.py  pwr_scraper.py  sii_scraper.py
src/mcp_server/tools/karierownik/offers_db/: __init__.py  offers_db.py  offers_db_async.py
src/mcp_server/tools/knowledge_graph/: graph_visualizer.py  rag.py  state.py  tool.py
src/mcp_server/tools/offers_db/: offers_db.py  rag.py  scheduler.py  settings.py  tool.py
src/mcp_server/tools/offers_db/data_scraper/: __init__.py  data_scraper.py
src/mcp_server/tools/offers_db/data_scraper/offers_db/: __init__.py  offers_db_async.py
src/scripts/: populate_graph.py
src/scripts/config/: generate_models.py
src/scripts/data_pipeline/: data_pipe.py  llm_pipe.py  main.py  pdf_loader.py
src/topwr_api/: __init__.py  engine.py  models.py  server.py  session_manager.py  test_api.py
(+6 files in other folders)
