[project]
name = "solvro-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastmcp>=2.12.4",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-neo4j>=0.5.0",
    "langchain-openai>=0.3.35",
    "langfuse>=3.6.2",
    "langgraph>=0.6.10",
    "prefect>=3.6.7",
    "ruff>=0.14.1",
]

[project.scripts]
pipeline = "src.scripts.data_pipeline.main:main"
server = "src.mcp_server.server:main"
kg = "src.mcp_client.client:call_knowledge_graph_tool"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
